[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
description = "EPSS API Python Client"
documentation = "https://github.com/kannkyo/epss-api"
homepage = "https://github.com/kannkyo/epss-api"
include = ["sbom.xml"]
keywords = ["EPSS", "security", "vulnerability"]
name = "epss-api"
readme = "README.rst"
repository = "https://github.com/kannkyo/epss-api"
version = "1.1.3"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.13"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
flake8-formatter-junit-xml = "^0.0.6"
flake8-html = "^0.4.3"
in-toto = "^1.3.1"
pycodestyle = "^2.7.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
recommonmark = "^0.7.1"
seman = "^0.1.3"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--junitxml=report.xml",
  "--verbose",
  "--html=report.html",
  "--self-contained-html",
]
testpaths = [
  "tests",
]
