[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
description = "EPSS API Python Client"
documentation = "https://github.com/kannkyo/epss-api"
homepage = "https://github.com/kannkyo/epss-api"
include = ["sbom.xml"]
keywords = ["EPSS", "security", "vulnerability"]
license = "MIT"
name = "epss-api"
readme = "README.rst"
repository = "https://github.com/kannkyo/epss-api"
version = "1.2.0"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = ">=1.26.13,<3.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-formatter-junit-xml = "^0.0.6"
flake8-html = "^0.4.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--junitxml=report.xml",
  "--verbose",
  "--html=report.html",
  "--self-contained-html",
]
testpaths = [
  "tests",
]
